src/app/loginpage/loginpage.component.scss
:host {
  .container {
    max-width: 100%;
    min-width: 300px;
    margin: 0 auto;
    background-color: #e0e0e0;
    .content{
      max-width: 700px;
      margin: 30px auto;
      padding: 30px;
      background-color: white;
      border-radius: 10px;
      display: flex;
      flex-direction: column;
      align-items: center;
      .reg-form{
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        padding-left: 20px;
        .form-control{
          min-width: 380px;
          label {
            display: inline-block;
            margin-bottom: 15px;
            font-size: 18px;
          }
          label.necessary::after{
            content: '*';
            color: red;
            margin: 0px 5px;
          }
        }
        .radio-group{
          display: flex;
          flex-direction: column;
          margin: 10px 20px;
        }
        .radio-button{
          margin: 5px 0;
        }
        .selector-time{
          width: 180px;
          display: flex;
          justify-content: space-between;
        }
        .selector-time-item{
          width: 80px;
        }
        .input-wrapper{
          position: relative;
          padding: 10px 15px;
          border-radius: 4px;
          background-color: rgba(0,0,0,.12);
          font-family: Roboto, "Helvetica Neue", sans-serif;
        }
        #select-file-button{
          display: inline-block;
          position: absolute;
          transform: translate(-5px, 0);
          opacity: 0%;
        }
        #submit-button{
          margin-top: 20px;
        }
      }
    }
  }
}

